/* Non-Duke University Employees - Per Diem: */

--- a/wiki/Information.mediawiki
+++ b/wiki/Information.mediawiki
@@ -67,7 +67,7 @@ Non-Duke University Employees – Per Diem:
 
 ===Non-Duke University Employees - Per Diem:===
 #	Duke University faculty and staff must furnish original receipts for meals and, if possible, use a Duke Procurement Card to purchase meals.  
-#	NSF prohibits the reimbursement for any alcohol.  Please note that we cannot reimburse you for your meal if alcoholic beverages appear on your receipt.  Please consult with your restaurant server to insure that alcoholic beverages do not appear on your receipt for NESCent. 
+#	NSF prohibits the reimbursement for any alcohol.  '''Please note that we cannot reimburse you for your meal if alcoholic beverages appear on your receipt.'''  Please consult with your restaurant server to insure that alcoholic beverages do not appear on your receipt for NESCent. 
 #       Amounts for meals are based upon the US Government’s per diem rates.  These pre-established and meeting-specific rates will be communicated to Duke employee participants prior to the meeting and will outline additional details and the process for reimbursing their expenses.
 
 ===Non-US Citizens - Original Receipts:===	
