--- a/wiki/Information.mediawiki
+++ b/wiki/Information.mediawiki
@@ -6,7 +6,7 @@ The following information is an overview of your travel plans for your trip to N
 
 NESCent will pay for your room, while you will be responsible for all other incidental room charges, including phone calls and meals you might charge to your room.
 
-If your travel plans change and you are not able to attend the meeting, please assist NESCent in avoiding any hotel penalties by contacting Danielle Wilson at NESCent via email Danielle@nescent.org or phone at 919-668-4545 to make any changes or cancel your room reservations.
+If your travel plans change and you are not able to attend the meeting, please assist NESCent in avoiding any hotel penalties by contacting Danielle Wilson at NESCent via email [mailto:danielle@nescent.org danielle@nescent.org] or phone at 919-668-4545 to make any changes or cancel your room reservations.
 
 ==Travel Arrangements:==
 Your airfare will be directly billed to NESCent.  A condition of your invitation to participate in any NESCent event, we ask that your travel plans be ticketed no less than 21 days in advance of your arrival date.  In some circumstances, particularly for international travel, we may request that you extend your stay to include a Saturday night.  In addition, our travel agent has been instructed to search for lower-cost airfares for all attendees.  
