/* NESCent Travel Arrangements */

--- a/wiki/Information.mediawiki
+++ b/wiki/Information.mediawiki
@@ -2,6 +2,8 @@
 
 The following information is an overview of your travel plans for your trip to NESCent.  Please also see our NSF/NESCent Travel Policies section.
 
+'''Specific travel information for your group can be downloaded here: [[Media:Travel.pdf|Travel.pdf]]'''
+
 ==Hotel Arrangements:==
 
 NESCent will pay for your room, while you will be responsible for all other incidental room charges, including phone calls and meals you might charge to your room.
