Change to wiki page

--- a/wiki/Information.mediawiki
+++ b/wiki/Information.mediawiki
@@ -1,4 +1,4 @@
-=NESCent Travel Arrangements:=
+=NESCent Travel & Hotel Arrangements=
 
 The following information is an overview of your travel plans for your trip to NESCent.  Please also see our NSF/NESCent Travel Policies section.
 
