--- a/wiki/Links.mediawiki
+++ b/wiki/Links.mediawiki
@@ -7,7 +7,8 @@
 ==Local Links==
 
 ; Hotel
-* [http://www.millenniumhotels.com/MCIL.nsf/LU_HOTELDOC/113$$HotelDescription?OpenDocument Millenium Hotel]
+* [http://www.marriott.com/hotels/travel/rducv-durham-marriott-convention-center/
+Durham Marriott Hotel]
 
 ; Dining & Entertainment
 * [http://www.ninthst.com/ Ninth Street] (right across from NESCent)
