--- a/wiki/Links.mediawiki
+++ b/wiki/Links.mediawiki
@@ -7,8 +7,7 @@
 ==Local Links==
 
 ; Hotel
-* [http://www.marriott.com/hotels/travel/rducv-durham-marriott-convention-center/
-Durham Marriott Hotel]
+* [http://www.marriott.com/hotels/travel/rducv-durham-marriott-convention-center/ Durham Marriott Hotel]
 
 ; Dining & Entertainment
 * [http://www.ninthst.com/ Ninth Street] (right across from NESCent)
