--- a/wiki/Links.mediawiki
+++ b/wiki/Links.mediawiki
@@ -1,5 +1,11 @@
 ''Note: We suggest you consider using [http://en.wikipedia.org/wiki/Social_bookmarking Social Bookmarking] for creating larger lists of links, as those you add here can't be searched by semantic tags. Popular sites include [http://www.citeulike.org/ CiteUlike], [http://www.connotea.org/ Connotea] and [http://del.icio.us del.icio.us].''
 
+== Hackathon ==
+
+* [[gmod:GMOD Evo Hackathon Proposal|Proposal]] submitted to [http://nesscent.org/ NESCent]
+* [[gmod:GMOD Evo Hackathon Open Call|Open call for participants]]
+* [[gmod:GMOD Evo Hackathon Proposal Supplemental Information|Proposal Supplemental Information]]
+
 ==Bibliography==
 
 * ''please add here ...''
