--- a/wiki/Diversity_and_Phenotypes.mediawiki
+++ b/wiki/Diversity_and_Phenotypes.mediawiki
@@ -3,3 +3,5 @@ GMOD's capabilities in managing phenotype and natural diversity data is scattere
 A [[gmod:Chado Natural Diversity Module Working Group|Natural Diversity Module initiative]]  to address at least the deficiencies within Chado has already formed earlier this year. Several key developers (one of the original developers of the module, and the developer of Phenex, a phenotype curation tool) are already local to NESCent, and so the hackathon provides a unique opportunity to review and refine the natural diversity data model face-to-face, and to integrate it with an updated and reconciled phenotype module.  A recently reported prototype of a Chado data adapter for Phenote, GMODs phenotype annotation tool, could be generalized to become the data persistence interface for such data.
 
 Aside from the data model deficiencies, the [http://aniseed-ibdm.univ-mrs.fr/ ANISEED] project has started efforts to generalize its sophisticated atlas/image-based web interface for phenotype data, and to make it operate on top of Chado. The hackathon could harness this synergy to help this effort leap forward, which could ultimately provide GMOD with the currently missing web-interface for such data.
+
+[[Category:Objectives]]
