--- a/wiki/Information.mediawiki
+++ b/wiki/Information.mediawiki
@@ -23,9 +23,11 @@ Upon arrival to the airport, please take a taxi to the hotel.  The taxis are ava
 ==Getting to NESCent:==
 NESCent will coordinate daily shuttle service between the hotel and the NESCent office for your visit.  We will also pre-schedule your out-bound airport shuttles (if applicable).  A schedule will be distributed upon your arrival at NESCent.
 
-==Meal Arrangements:== 
-Non-Duke University Employees – Per Diem:
-#NESCent is limited by the US Government’s meal per diem rates.  NESCent may modify these rates.
+== Meal Arrangements: == 
+
+'''''If'' NESCent is paying your meal costs and you aren't with Duke:'''
+
+#NESCent is limited by the US Government’s meal ''per diem'' rates.  NESCent may modify these rates.
 #Due to Duke University policies, it is not possible to offer attendees a meal program of NESCent-paid meals and partial per diems. We have found it more efficient to provide attendees with a post-meeting reimbursement for a pre-established GSA-related per diem rate. Attendees (non-Duke attendees) are not required to provide NESCent with any meal receipts as part of this program.
 #'''''Please note that NSF prohibits the reimbursement for any alcohol'''''.  
 #NESCent will communicate to your attendees the reimbursement rates for the meeting.
