/* NSF/NESCent Travel Policy */

--- a/wiki/Information.mediawiki
+++ b/wiki/Information.mediawiki
@@ -40,6 +40,8 @@ NESCent will coordinate daily shuttle service between the hotel and the NESCent 
 
 =NSF/NESCent Travel Policy=
 
+'''These restrictions apply to you only for the expenses that NESCent is funding for you.'''
+
 ==Flight Arrangements:==
 #	We are required by NSF to use US-based air-carriers and require coach-class tickets.  Occasionally, there are situations where US carriers are not available.  We address these on a case-by-case basis.    
 #	There are rare occasions where an attendee may request an exemption to coach-class travel for medical reasons.  These are addressed on a case-by-case basis and may require a written statement from the attendee’s physician for full consideration.  This is a NSF policy.
