Change to wiki page

--- a/wiki/Use_Cases.mediawiki
+++ b/wiki/Use_Cases.mediawiki
@@ -1,1 +1,24 @@
 Use cases are specific problems that we could address or solutions we could implement using the hackathon's deliverables. Use cases will help the group prioritize possible deliverables, and then give developers concrete examples to address when developing solutions.  (Put another way, use cases help developers deliver things that are actually useful.)
+
+We already have
+* [[Objectives]]
+
+== What's in a Use Case? ==
+
+Use cases typically specify:
+; Use Case Name - General & Specific
+* Both a general area, and a specific scenario in that area.
+; Motivation
+* Explanation of why this use case is important.
+; Key Challenges
+* What are they key issues in implementing a solution to this use case?
+; Preconditions for Use:
+* What must a user have to use the solution.  Sequence (what kinds)?, Character-state data matrices?, ...
+; User Steps
+* What steps would a user go through to achieve this task?
+; Results
+* What is the final output / result of this use case?
+; References (optional)
+* Links to documents related to this use case.
+
+A whole slew of example use cases are available from the [http://hackathon.nescent.org/UseCases Phyloinformatics] and [https://www.nescent.org/wg_evoinfo/Database_Interop_Hackathon/Use_Cases#Use_Cases Database Interoperability] Hackathons.
