Change to wiki page

--- a/wiki/Template:Participant.mediawiki
+++ b/wiki/Template:Participant.mediawiki
@@ -1,2 +1,2 @@
 |-
-|[[User:{{{1}}}{{{2}}}|{{{5}}}{{{2}}}, {{{1}}}{{{5}}}]]||{{{5}}}{{{3}}}{{{5}}}||{{{5}}}[mailto:{{{4}}} {{{4}}}{{{5}}}]
+|[[User:{{{4}}}|{{{5}}}{{{2}}}, {{{1}}}{{{5}}}]]||{{{5}}}{{{3}}}{{{5}}}||{{{5}}}[mailto:{{{4}}} {{{4}}}{{{5}}}]
