--- a/wiki/Participants.mediawiki
+++ b/wiki/Participants.mediawiki
@@ -4,11 +4,11 @@ Names and email addresses of the organizers are in bold face. The participant li
 !Participant	
 !Affiliation & Interests
 !Email
-{{Participant|Filip|Balejko||filip.balejko@gmail.com|}}
-{{Participant|Jim|Balhoff||balhoff@nescent.org|}}
-{{Participant|Yuri|Bendana||ybendana@usc.edu|}}
-{{Participant|Robert|Buels||rmb32@cornell.edu|}}
-{{Participant|Scott|Cain||scott@scottcain.net|}}
+{{Participant|Filip|Balejko|Warsaw University; phylogenetic analyses pipelines in [[gmod:Galaxy|Galaxy]], HyPhy, NGS visualization, Viral organisms / measurably evolving populations|filip.balejko@gmail.com|}}
+{{Participant|Jim|Balhoff|[http://nescent.org NESCent], [http://phenoscape.org Phenoscape]; standardize phenotype representations, in terms of both ontological modeling and serialization formats, so that data can be easily shared and cross-linked across projects and scientific domains|balhoff@nescent.org|}}
+{{Participant|Yuri|Bendana|USC Biological Sciences; population diversity and phenotype data, using Chado for genotype and phenotype|ybendana@usc.edu|}}
+{{Participant|Robert|Buels|[http://solgenomics.net/ Sol Genomics Network], Boyce Thompson Institute|rmb32@cornell.edu|'''}}
+{{Participant|Scott|Cain|[http://oicr.on.ca OICR], [[gmod:Main Page|GMOD]]|scott@scottcain.net|'''}}
 {{Participant|Terry|Casstevens||tmc46@cornell.edu|}}
 {{Participant|Dave|Clements|[http://nescent.org NESCent], [[gmod:Main Page|GMOD]]|clements@nescent.org|}}
 {{Participant|Delphine|Dauga||dauga@ibdm.univ-mrs.fr|}}
@@ -27,7 +27,7 @@ Names and email addresses of the organizers are in bold face. The participant li
 {{Participant|Chris|Mungall||cjm@berkeleybop.org|}}
 {{Participant|Sander|Pick||sanderpick@gmail.com|}}
 {{Participant|Sergei|Pond||spond@ucsd.edu|}}
-{{Participant|Weigang|Qiu||weigang@genectr.hunter.cuny.edu|}}
+{{Participant|Weigang|Qiu|Hunter College of City University of New York, Bio::Align::Graphics, Bio::Tree::Draw, tree-based character visualization capabilities; http://borreliagenome.org, Processing, viewing genome variations in a phylogenetic order|weigang@genectr.hunter.cuny.edu|}}
 {{Participant|Mitch|Skinner||mitch_skinner@berkeley.edu|}}
 {{Participant|Jason|Stajich||jason.stajich@ucr.edu|}}
 {{Participant|Lincoln|Stein||lincoln.stein@gmail.com|}}
