--- a/wiki/Agenda.mediawiki
+++ b/wiki/Agenda.mediawiki
@@ -5,9 +5,8 @@ Date, time, and call details will be posted here, once it is known.
 * [[Objectives]]: Quick review of the three objectives.
 * Introductions: what [[participants]]' interests are, and what you want to work on.
 * Resources
-** [[Lists|Mailing List]]
-** This wiki
-**: High quality content will be copied to [[gmod:Main Page|main GMOD wiki]] after this event.
+** [[Lists|Mailing List]]: all participants can post. 
+** This wiki: All participants can update.  High quality content will be copied to [[gmod:Main Page|main GMOD wiki]] after the event.
 **: '''Q:''' Should the hackathon wiki be wide open for viewing to anyone, or should it require a login to view pages?
 * Pre-hackathon work
 ** [[Use Cases]]: Clearly stated, concrete problems that can't be addressed currently, and that we could make significant progress towards during the hackathon.
