/* First Teleconference Agenda */

--- a/wiki/Agenda.mediawiki
+++ b/wiki/Agenda.mediawiki
@@ -1,6 +1,6 @@
 = First Teleconference Agenda =
 
-Date, time, and call details will be posted here, once it is known.
+October 4, 2010, 4pm Eastern.
 
 * [[Objectives]]: Quick review of the three objectives.
 * Introductions: what [[participants]]' interests are, and what you want to work on.
