--- a/wiki/Participants.mediawiki
+++ b/wiki/Participants.mediawiki
@@ -5,7 +5,7 @@ Names and email addresses of the organizers are in bold face. The participant li
 !Affiliation & Interests
 !Email
 {{Participant|Filip|Balejko|Warsaw University; phylogenetic analyses pipelines in [[gmod:Galaxy|Galaxy]], HyPhy, NGS visualization, Viral organisms / measurably evolving populations|filip.balejko@gmail.com|}}
-{{Participant|Jim|Balhoff|[http://nescent.org NESCent], [http://phenoscape.org Phenoscape]; standardize phenotype representations, in terms of both ontological modeling and serialization formats, so that data can be easily shared and cross-linked across projects and scientific domains|balhoff@nescent.org|}}
+{{Participant|Jim|Balhoff|[http://nescent.org NESCent], [http://phenoscape.org Phenoscape], [http://hymao.org HAO]; standardize phenotype representations, in terms of both ontological modeling and serialization formats, so that data can be easily shared and cross-linked across projects and scientific domains|balhoff@nescent.org|}}
 {{Participant|Yuri|Bendana|USC Biological Sciences; population diversity and phenotype data, using Chado for genotype and phenotype|ybendana@usc.edu|}}
 {{Participant|Robert|Buels|[http://solgenomics.net/ Sol Genomics Network], Boyce Thompson Institute|rmb32@cornell.edu|'''}}
 {{Participant|Scott|Cain|[http://oicr.on.ca OICR], [[gmod:Main Page|GMOD]]|scott@scottcain.net|'''}}
